# toif

./: README.md  toif.code-workspace
toif-convert/: pyproject.toml
toif-convert/tests/: book.toif  font.toif  shi.toif  test_toif_convert.py  yong.toif
toif-convert/toif_convert/: convert.py
toif-mako/: Makefile  fonts.h.mako  gen_fonts.py  gen_images.py  gen_rgb565.py  images.h.mako  rgb565.h.mako
toif-show/show/: CMakeLists.txt  fonts.h  images.h  show.c  show.h
